# GameForProgrammers

./: Cargo.toml  README.md
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: character.rs  direction.rs  game.rs  lib.rs  player.rs  pos.rs  traits.rs
example/simple_client_on_rust/: Cargo.toml
example/simple_client_on_rust/src/: main.rs
game_client_api/: Cargo.toml
game_client_api/src/: lib.rs
json_example/: action.json  game_info.json
server/: Cargo.toml
server/src/: main.rs
server/src/server/: client.rs  server.rs
src/: main.rs
src/game/: direction.rs  game.rs  map.rs  mod.rs  player.rs  pos.rs  traits.rs
src/json/: action.json
src/server/: client.rs  server.rs
