[package]
name = "simple_client_on_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
game_client_api = {"path" = "../../game_client_api"}
url = "2.3.1"
serde_json = "1.0.86"